<resources>
    <string name="app_name">E-Commerce</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Home labels -->
    <string name="home">Inicio</string>
    <string name="search_product">Buscar producto</string>
    <string name="categories">Categorias</string>
    <string name="view_all">Ver todo</string>
    <string name="products">Productos</string>
    <string name="title">Titulo</string>
    <string name="price">Precio</string>
    <string name="description">Descripción</string>
    <string name="category">Categoria</string>
    <string name="rating">Valoración</string>
    <string name="discount">Descuento</string>
    <string name="related">Relacionado</string>
    <string name="all">Todo</string>
    <string name="brand">Marca</string>
    <string name="for_you">Para ti</string>

    <string name="dollar_sign">$</string>
    <string name="discount_text">- %.2f %%</string>

</resources>